# kedro-psutil-telemetry

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
api/: index.html
docs/: api.md  index.md  logging.md
logging/: index.html
search/: search_index.json
src/kedro_psutil_telemetry/: __init__.py  hook.py
tests/: test_hook.py  test_smoke.py
