[project]
name = "kedro-psutil-telemetry"
dynamic = ["version"]
description = "Kedro hook to trace system resources (Memory, CPU, Disk I/O, Network, Swap) during pipeline execution and log them to MLflow"
keywords = ["kedro", "mlflow", "psutil", "telemetry", "monitoring", "hook"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: Kedro",
    "Topic :: System :: Monitoring",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = ["kedro>=0.18", "psutil>=5.8", "mlflow>=2.0"]

[project.urls]
Homepage = "https://github.com/saemeon/kedro-psutil-telemetry"
Repository = "https://github.com/saemeon/kedro-psutil-telemetry"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/kedro_psutil_telemetry/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "kedro_psutil_telemetry._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kedro_psutil_telemetry = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/kedro_psutil_telemetry --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"]
